Addressing Reviwer comments relating to text and wording
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/SeniorRA_thermstats_ms.Rmd
+++ b/SeniorRA_thermstats_ms.Rmd
@@ -132,7 +132,7 @@ __Word count:__ 3206/3000 words
 
 2. Here, we present an `R` package -- `ThermStats` --  for processing thermal images and other gridded temperature data. The package addresses current constraints on applying thermography in ecology, by speeding up and simplifying the extraction of data from thermal images, and by facilitating the calculation of different metrics of thermal heterogeneity.
 
-3. We demonstrate how `ThermStats` can be used to capture temperature variation at fine spatial scales in structurally complex habitat, such as tropical rainforest, using two datasets: thermal images collected in the field (~0.5 cm^2^ resolution), and a temperature layer estimated from LiDAR data (2,500 m^2^ resolution). `ThermStats` allows a range of statistics to be calculated that capture both the frequency distribution and spatial patterns of temperature, and functions are designed to accommodate different sampling strategies and data in either matrix or raster format. 
+3. We demonstrate how `ThermStats` can be used to capture temperature variation at fine spatial scales in structurally complex habitat, such as tropical rainforest, using two datasets: thermal images collected in the field (~0.5 cm^2^ resolution), and a temperature layer estimated from *LIght Detection And Ranging (LIDAR)* data (2,500 m^2^ resolution). `ThermStats` allows a range of statistics to be calculated that capture both the frequency distribution and spatial patterns of temperature, and functions are designed to accommodate different sampling strategies and data in either matrix or raster format. 
 
 4. Our package simplifies the processing of thermal data, and our metrics capture key spatiotemporal temperature trends that underpin physiological, behavioural and demographic responses to environmental change. As such, `ThermStats` can advance a wide range of studies requiring fine-scale surface temperature data for microclimate investigations.
 
@@ -140,9 +140,9 @@ __253 words__
 
 # Introduction
 
-Temperature variation over scales of mm to m has a central role in the ecology of many species. For small organisms or life stages, this is the scale at which nearly all thermal experiences will occur [@potter_microclimatic_2013]. Mobile species utilise fine-scale thermal heterogeneity on a daily basis to avoid or exploit extremes of heat. Over longer time periods, climate at this scale ('microclimate') can also maximise fitness and thus influence the fine-scale distribution of less mobile species [@maclean_fine-scale_2017], allowing species to persist within 'microrefugia' where climatic conditions are otherwise unsuitable, and potentially maintaining higher overall biodiversity in thermally heterogenous habitats [@hannah_fine-grain_2014]. The same mechanisms underlying fine-scale thermoregulation and thermal microrefugia could temper species' exposure to global climate change [@suggitt_extinction_2018; @scheffers_microhabitats_2014], especially in structurally complex habitats such as tropical rainforests [@scheffers_extreme_2017]. To understand and predict species' responses to temperature change we must therefore be able to efficiently capture thermal heterogeneity at fine spatial scales, but there are challenges associated with acquiring and analysing temperature data at this resolution.
+Temperature variation over *spatial* scales of mm to m has a central role in the ecology of many species. For small organisms, this is the scale at which nearly all thermal experiences will occur [@potter_microclimatic_2013]. Mobile species utilise fine-scale thermal heterogeneity on a daily basis to avoid or exploit extremes of heat. Over longer time periods, climate at this scale ('microclimate') can also maximise fitness and thus influence the fine-scale distribution of less mobile species [@maclean_fine-scale_2017]. *Species can* persist within 'microrefugia' where climatic conditions are otherwise unsuitable, potentially maintaining higher overall biodiversity in thermally heterogenous habitats [@hannah_fine-grain_2014]. The same mechanisms underlying fine-scale thermoregulation and thermal microrefugia could temper species' exposure to global climate change [@suggitt_extinction_2018; @scheffers_microhabitats_2014], especially in structurally complex habitats such as tropical rainforests [@scheffers_extreme_2017]. To understand and predict species' responses to temperature change we must therefore be able to efficiently capture thermal heterogeneity at fine spatial scales, but there are challenges associated with acquiring and analysing temperature data at this resolution.
 
-The use of temperature dataloggers has been instrumental in advancing the field of thermal ecology [@bramer_advances_2018]. However, dataloggers can only record the air temperature in their immediate vicinity, and so must be highly replicated in space and in different microhabitats to capture spatial temperature variation. The temperature recorded by dataloggers is strongly influenced by the use of radiation shields and their construction [@bramer_advances_2018], and even unshielded sensors have weatherproof casing that influence measurements [@bramer_advances_2018]. The 'correct' way to measure temperature largely depends on what best captures the temperature experienced by the organism of interest [@blonder_extreme_2018]. The vast majority of terrestrial organisms are very small, flat, or thigmothermic (i.e. thermoregulate via direct contact with a surface), hence surface temperature may be more biologically relevant than free air temperature [e.g. @kaspari_thermal_2015]. 
+The use of temperature dataloggers has been instrumental in advancing the field of thermal ecology [@bramer_advances_2018]. However, dataloggers can only record the air temperature in their immediate vicinity, and so must be highly replicated in space and in different microhabitats to capture spatial temperature variation *at ecologically relevant spatial scales*. The temperature recorded by dataloggers is strongly influenced by the use of radiation shields and their construction [@bramer_advances_2018], and even unshielded sensors have weatherproof casing that influence measurements [@bramer_advances_2018]. The 'correct' way to measure temperature largely depends on what best captures the temperature experienced by the organism of interest [@blonder_extreme_2018]. The vast majority of terrestrial organisms are very small, flat, or thigmothermic (i.e. thermoregulate via direct contact with a surface), hence surface temperature may be more biologically relevant *than air temperature* [e.g. @kaspari_thermal_2015]. 
 
 Technological advances in recent years have made thermal cameras an increasingly affordable and practical complement to dataloggers [@scheffers_extreme_2017; @faye_toolbox_2016]. A single thermal image provides thousands of spatially explicit surface temperature measurements at the mm-cm scale. _The first ecological study to use thermography was in 1977 [@thofelt_thermographic_1977], and since then there have been approximately 47 additional studies (Supplementary Text S2)_. Clearly thermography is an emerging technique in ecology, spanning studies of mite movement over leaf surfaces [@caillon_warming_2014] to detecting mange in wolves [@cross_energetic_2016]. 
 
@@ -161,9 +161,9 @@ We illustrate the utility of our package using temperature data for the island o
 
 ## Step 1: Thermal image collection
 
-High-resolution surface temperature measurements can easily be collected in the field using a handheld thermal camera. We used a FLIR Systems, model E40 camera, which costs ~US$4,000, weighs 825 g, and takes 19,200 measurements (160 x 120 pixels) in a single photo  [@flir_manual_2016; @scheffers_extreme_2017]. Various other models are available, including the smaller and more affordable FLIR ONE smartphone attachment at ~US$300, 34.5 g and a resolution of 80 x 60 pixels. As with any field study, the sampling design should aim to achieve sufficient coverage over the study area and over time, such that the images are representative samples of the treatments of interest.  For example, a single image of the ground from 1 m away encompasses an area of 0.9 x 1.1 m (1 pixel &cong; 0.5 cm^2^) using a FLIR E40 camera [@flir_manual_2016], and so it may be necessary to take multiple photos in different cardinal directions and at different times of day to effectively represent the temperature of a study plot [@scheffers_extreme_2017; @senior_tropical_2018].  
+*Surface temperature measurements at high spatial resolution* can easily be collected in the field using a handheld thermal camera. We used a *FLIR model E40 camera*, which costs ~US$4,000, weighs 825 g, and takes 19,200 measurements (160 x 120 pixels) in a single photo  [@flir_manual_2016; @scheffers_extreme_2017]. Various other models are available, including the smaller and more affordable FLIR ONE smartphone attachment at ~US$300, 34.5 g and a resolution of 80 x 60 pixels. As with any field study, the sampling design should aim to achieve sufficient coverage over the study area and over time, such that the images are representative samples of the treatments of interest.  For example, a single image of the ground from 1 m away encompasses an area of 0.9 x 1.1 m (1 pixel &cong; 0.5 cm^2^) using a FLIR E40 camera [@flir_manual_2016], and so it may be necessary to take multiple photos in different cardinal directions and at different times of day to effectively represent the temperature of a study plot [@scheffers_extreme_2017; @senior_tropical_2018].  
 
-Before any data are collected, we recommend users familiarise themselves with the technology [for a thorough review, see @tattersall_infrared_2016]. There are various sources of the infrared radiation detected by a thermal camera, but we want to focus only on the radiation emitted by the object of interest, which is a function of its temperature. The amount of radiation emitted by a particular object, for a given temperature, depends on its emissivity. A perfect blackbody has an emissivity of 1, while surfaces that an ecologist is likely to photograph typically have an emissivity from 0.92 [for dry, bare soil; @flir_manual_2016] to 0.99 [for green broadleaf forest; @snyder_classification-based_1998].  Additionally, the temperature and relative humidity of the atmosphere and the distance between the object and the camera will affect (1) the amount of emitted radiation that is absorbed by the atmosphere and (2) the amount of background radiation, with some of this also being reflected by the object (reflected apparent temperature). 
+Before any data are collected, we recommend users familiarise themselves with the technology [for a thorough review, see @tattersall_infrared_2016]. There are various sources of the infrared radiation detected by a thermal camera, but we want to focus only on the radiation emitted by the object *or scene* of interest, which is a function of its temperature. The amount of radiation emitted by a particular object, for a given temperature, depends on its emissivity. A perfect blackbody has an emissivity of 1, while surfaces that an ecologist is likely to photograph typically have an emissivity from 0.92 [for dry, bare soil; @flir_manual_2016] to 0.99 [for green broadleaf forest; @snyder_classification-based_1998].  Additionally, the temperature and relative humidity of the atmosphere and the distance between the object and the camera will affect (1) the amount of emitted radiation that is absorbed by the atmosphere and (2) the amount of background radiation, with some of this also being reflected by the object (reflected apparent temperature). 
 
 To accurately quantify surface temperature, environmental parameters (emissivity, reflected apparent temperature, atmospheric temperature, atmospheric relative humidity and object distance) can be set in the camera or defined during data processing (see 'Step 3: Conversion of raw data'). The benefit of the latter approach is that the user can measure atmospheric temperature and relative humidity concurrently with thermal image collection, and these parameters can then be set individually during image processing. Object distance should be minimised and kept constant where possible. Emissivity can either be estimated from the literature [cf. @scheffers_extreme_2017] or sampled in the field [@flir_manual_2016]. Reflected apparent temperature can also be sampled [@flir_manual_2016], although for high emissivities and short object distances, relatively little radiation is reflected and thus apparent temperature can be assumed to equal the atmospheric temperature [@tattersall_thermimage:_2017]. It is recommended that thermal cameras are regularly calibrated (FLIR Systems suggest doing so once per year).
 
@@ -460,7 +460,7 @@ grid.arrange(p4a,
 
 ## Using other gridded temperature data
 
-Analytical functions in `ThermStats` are designed for any gridded temperature data. We illustrate this using a mean annual temperature layer (50 x 50 m resolution) estimated from canopy structure and topographic variables measured using LiDAR [@jucker_canopy_2018]. The layer encompasses forest and oil palm plantation within the Stability of Altered Forest Ecosystems (SAFE) project [@ewers_large-scale_2011]. We created a raster stack with one layer for cells inside the plantation boundary and one for cells outside, and used `stats_by_group` to identify hot and cold spots within each layer. The patch characteristics calculated by `stats_by_group` include upper and lower quantiles and the median, which together characterise the temperature distribution and can be used to construct boxplots (Figure \@ref(fig:fig-5)).
+Analytical functions in `ThermStats` are designed for any gridded temperature data. We illustrate this using a mean annual temperature layer (50 x 50 m resolution) estimated from canopy structure and topographic variables measured using LIDAR [@jucker_canopy_2018]. The layer encompasses forest and oil palm plantation within the Stability of Altered Forest Ecosystems (SAFE) project [@ewers_large-scale_2011]. We created a raster stack with one layer for cells inside the plantation boundary and one for cells outside, and used `stats_by_group` to identify hot and cold spots within each layer. The patch characteristics calculated by `stats_by_group` include upper and lower quantiles and the median, which together characterise the temperature distribution and can be used to construct boxplots (Figure \@ref(fig:fig-5)).
 
 (ref:cap-5) Panel (a) depicts variation in modelled mean annual temperature in the Stability of Altered Forest Ecosystems (SAFE) project [@ewers_large-scale_2011; @jucker_canopy_2018], overlaid with the boundary of oil palm plantations (black outline). Panel (b) shows the temperature distribution of hot spots (left) and cold spots (right), inside (orange) and outside (green) plantations.
 
@@ -571,11 +571,11 @@ Fine-scale temperature variation across space and time has a huge influence on s
 
 *The development version of* `ThermStats` can be downloaded from GitHub: https://github.com/rasenior/ThermStats. Bug reports and suggested enhancements can be submitted to: https://github.com/rasenior/ThermStats/issues. 
 
-*This manuscript used `ThermStats` version 0.7.10, which is deposited on Zenodo [@senior_thermstats_2019]. The manuscript itself can be reproduced by downloading the scripts and data from GitHub (https://github.com/rasenior/ThermStats_ms), and rendering either using the knit button in RStudio or the code `rmarkdown::render("SeniorRA_thermstats_ms.Rmd", output_format = "bookdown::word_document2")`.*
+*This manuscript used `ThermStats` version 0.7.10, which is deposited on Zenodo [@senior_thermstats_2019]. The manuscript itself can be reproduced by downloading the scripts and data from GitHub (https://github.com/rasenior/ThermStats_ms), and rendering using either the knit button in RStudio or the code `rmarkdown::render("SeniorRA_thermstats_ms.Rmd", output_format = "bookdown::word_document2")`.*
 
 # Acknowledgements
 
-Thanks to Tommaso Jucker for providing the modelled mean annual temperature layer, and to Manoela S. Machado Mollinari for helpful discussions. R.A.S. was funded by a NERC studentship through the ACCE (Adapting to the Challenges of a Changing Environment) Doctoral Training Partnership (Grant No. NE/L002450/1).
+Thanks to Tommaso Jucker for providing the modelled mean annual temperature layer, and to Manoela S. Machado Mollinari for helpful discussions. *We are very grateful to the reviewers for their insightful comments and suggestions.* R.A.S. was funded by a NERC studentship through the ACCE (Adapting to the Challenges of a Changing Environment) Doctoral Training Partnership (Grant No. NE/L002450/1).
 
 # Author contributions
 
