Reducing outline thickness
Signed-off-by: Rebecca A. Senior <rebecca.a.senior@gmail.com>

--- a/SeniorRA_thermstats_SOM.Rmd
+++ b/SeniorRA_thermstats_SOM.Rmd
@@ -226,6 +226,8 @@ plot_patches(
     df = flir_stats$df,
     # The patch outlines
     patches = flir_stats$patches, 
+    # The thickness of outlines
+    outline_size = 0.1,
     # Add hatching
     hatching = TRUE)
 ```
