--- a/SeniorRA_thermstats_SOM.tex
+++ b/SeniorRA_thermstats_SOM.tex
@@ -365,6 +365,8 @@ In addition to patch statistics, \texttt{get\_stats} can return (1) the temperat
     \DataTypeTok{df =}\NormalTok{ flir_stats}\OperatorTok{$}\NormalTok{df,}
     \CommentTok{# The patch outlines}
     \DataTypeTok{patches =}\NormalTok{ flir_stats}\OperatorTok{$}\NormalTok{patches, }
+    \CommentTok{# The thickness of outlines}
+    \DataTypeTok{outline_size =} \FloatTok{0.3}\NormalTok{,}
     \CommentTok{# Add hatching}
     \DataTypeTok{hatching =} \OtherTok{TRUE}\NormalTok{)}
 \end{Highlighting}
